added  in the edges routes
